--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.0.7",
         "react-icons": "^4.1.0",
+        "react-iframe": "^1.8.5",
         "react-router-dom": "^6.6.2",
         "react-scripts": "^5.0.1",
+        "react-scroll": "^1.9.0",
         "react-transition-group": "^4.4.2",
         "typewriter-effect": "^2.18.2",
         "web-vitals": "^3.1.1"
